--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "extraResources": [
       "bin/"
-    ],    
+    ],
     "files": [
       "dist/electron/**/*"
     ],
@@ -52,12 +52,14 @@
     "linux": {
       "icon": "build/icons"
     }
-    
   },
   "dependencies": {
     "axios": "^0.18.0",
     "child_process": "^1.0.2",
+    "imports-loader": "^0.8.0",
+    "three": "^0.108.0",
     "vue": "^2.5.16",
+    "vue-3d-model": "^1.1.1",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.19",
